src/parser/snapshots/rremix__parser__tests__ex__test20.rem.snap
---
source: src/parser/mod.rs
assertion_line: 72
expression: "format_pair(&pair.unwrap(), 0, true)"
---
- program
  - statement > assignment_statement
    - variable: "list"
    - colon: ":"
    - expression > unary_expression > simple_expression > literal > list
      - list_item > expression > unary_expression > simple_expression > literal > number: "1"
      - list_item > expression > unary_expression > simple_expression > literal > number: "2"
      - list_item > expression > unary_expression > simple_expression > literal > number: "4"
      - list_item > expression > unary_expression > simple_expression > literal > number: "8"
      - list_item > expression > unary_expression > simple_expression > literal > number: "16"
      - list_item > expression > unary_expression > simple_expression > literal > number: "32"
      - list_item > expression > unary_expression > simple_expression > literal > number: "64"
      - list_item > expression > unary_expression > simple_expression > literal > number: "128"
      - list_item > expression > unary_expression > simple_expression > literal > number: "256"
  - statement > assignment_statement
    - variable: "new-list"
    - colon: ":"
    - expression > unary_expression > simple_expression > function_call
      - single_name_part: "copy"
      - expression > unary_expression > simple_expression > variable: "list"
  - statement > expression > unary_expression > simple_expression > function_call
    - single_name_part: "showline"
    - expression > unary_expression > simple_expression > variable: "new-list"
    - single_name_part: "as"
    - single_name_part: "list"
  - statement > list_element_assignment
    - single_name_part: "list"
    - expression > unary_expression > simple_expression > literal > number: "1"
    - expression > unary_expression > simple_expression > literal > number: "99"
  - statement > list_element_assignment
    - single_name_part: "new-list"
    - expression > unary_expression > simple_expression > literal > number: "2"
    - expression > unary_expression > simple_expression > literal > number: "100"
  - statement > expression > unary_expression > simple_expression > function_call
    - single_name_part: "showline"
    - expression > unary_expression > simple_expression > variable: "list"
    - single_name_part: "as"
    - single_name_part: "list"
  - statement > expression > unary_expression > simple_expression > function_call
    - single_name_part: "showline"
    - expression > unary_expression > simple_expression > variable: "new-list"
    - single_name_part: "as"
    - single_name_part: "list"
  - EOI: ""
