src/parser/snapshots/rremix__parser__tests__ex__test5.rem.snap
---
source: src/parser/mod.rs
assertion_line: 72
expression: "format_pair(&pair.unwrap(), 0, true)"
---
- program
  - statement > assignment_statement
    - variable: "a"
    - colon: ":"
    - expression > unary_expression > simple_expression > literal > string: "\"yesterday\""
  - statement > expression > unary_expression > simple_expression > function_call
    - single_name_part: "if"
    - single_name_part: "false"
    - block
      - teol_comment: "; comment"
      - new_indent: "\t"
      - statement > expression > unary_expression > simple_expression > function_call
        - single_name_part: "show"
        - expression > unary_expression > simple_expression > variable: "a"
    - single_name_part: "otherwise"
    - block
      - new_indent: "\t"
      - statement > expression > unary_expression > simple_expression > function_call
        - single_name_part: "show"
        - literal > string: "\"no\""
      - statement > expression > unary_expression > simple_expression > function_call
        - single_name_part: "new"
        - single_name_part: "line"
  - statement > expression > unary_expression > simple_expression > function_call
    - single_name_part: "if"
    - expression > unary_expression > simple_expression > literal > boolean: "true"
    - block
      - new_indent: "\t"
      - statement > expression > unary_expression > simple_expression > function_call
        - single_name_part: "show"
        - expression > unary_expression > simple_expression > variable: "a"
      - statement > expression > unary_expression > simple_expression > function_call
        - single_name_part: "new"
        - single_name_part: "line"
    - single_name_part: "otherwise"
    - block
      - new_indent: "\t"
      - statement > expression > unary_expression > simple_expression > function_call
        - single_name_part: "show"
        - literal > string: "\"no\""
  - EOI: ""
