src/parser/snapshots/rremix__parser__tests__ex__test7.rem.snap
---
source: src/parser/mod.rs
assertion_line: 72
expression: "format_pair(&pair.unwrap(), 0, true)"
---
- program
  - function_definition
    - function_signature
      - name_paren > name_part > single_name_part: "repeat"
      - name_paren > name_part > single_name_part: "until"
      - name_paren > paren > single_name_part: "condition-block"
      - name_paren > paren > single_name_part: "block"
    - colon: ":"
    - function_statements
      - continue_indent: ""
      - new_indent: "\t"
      - statement > expression > unary_expression > simple_expression > function_call
        - single_name_part: "repeat"
        - expression > unary_expression > simple_expression > variable: "block"
        - single_name_part: "until"
        - expression > unary_expression > simple_expression > variable: "condition-block"
  - statement > assignment_statement
    - variable: "x"
    - colon: ":"
    - expression > unary_expression > simple_expression > literal > number: "1"
  - statement > expression > unary_expression > simple_expression > function_call
    - single_name_part: "showline"
    - literal > string: "\"about to repeat\""
  - statement > expression > unary_expression > simple_expression > function_call
    - single_name_part: "repeat"
    - continue_indent: ""
    - inline_block
      - new_indent: "\t"
      - statement > expression > unary_expression > simple_expression > function_call
        - single_name_part: "showline"
        - expression > unary_expression > simple_expression > variable: "x"
      - continue_indent: "\t"
      - statement > assignment_statement
        - variable: "x"
        - colon: ":"
        - expression > binary_expression
          - unary_expression > simple_expression > variable: "x"
          - operator: "+"
          - expression > unary_expression > simple_expression > literal > number: "1"
    - single_name_part: "until"
    - statement > expression > binary_expression
      - unary_expression > simple_expression > variable: "x"
      - operator: ">"
      - expression > unary_expression > simple_expression > literal > number: "4"
  - statement > expression > unary_expression > simple_expression > function_call
    - single_name_part: "showline"
    - literal > string: "\"and the other repeat\""
  - statement > expression > unary_expression > simple_expression > function_call
    - single_name_part: "repeat"
    - single_name_part: "until"
    - statement > expression > binary_expression
      - unary_expression > simple_expression > variable: "x"
      - operator: ">"
      - expression > unary_expression > simple_expression > literal > number: "10"
    - newindent_block
      - continue_indent: ""
      - new_indent: "\t"
      - statement > expression > unary_expression > simple_expression > function_call
        - single_name_part: "showline"
        - expression > unary_expression > simple_expression > variable: "x"
      - continue_indent: "\t"
      - statement > assignment_statement
        - variable: "x"
        - colon: ":"
        - expression > binary_expression
          - unary_expression > simple_expression > variable: "x"
          - operator: "+"
          - expression > unary_expression > simple_expression > literal > number: "2"
  - statement > expression > unary_expression > simple_expression > function_call
    - single_name_part: "showline"
    - literal > string: "\"finished\""
  - EOI: ""
