src/parser/snapshots/rremix__parser__tests__ex__test8.rem.snap
---
source: src/parser/mod.rs
assertion_line: 72
expression: "format_pair(pair.unwrap(), 0, true)"
---
- program
  - function_definition
    - function_signature
      - name_paren > name_part > single_name_part: "sqr"
      - name_paren > paren > single_name_part: "v"
    - colon: ":"
    - function_statements
      - new_indent: "\t"
      - statement > expression > binary_expression
        - unary_expression > simple_expression > variable: "v"
        - operator: "×"
        - expression > unary_expression > simple_expression > variable: "v"
  - statement > assignment_statement
    - variable: "n"
    - colon: ":"
    - expression > unary_expression > simple_expression > literal > number: "5"
  - statement > expression > unary_expression > simple_expression > function_call
    - single_name_part: "showline"
    - expression > binary_expression
      - unary_expression > simple_expression > function_call
        - single_name_part: "sqr"
        - expression > unary_expression > simple_expression > variable: "n"
      - operator: "+"
      - expression > unary_expression > expression > binary_expression
        - unary_expression > simple_expression > literal > number: "4"
        - operator: "-"
        - expression > unary_expression > simple_expression > literal > number: "7"
  - statement > expression > unary_expression > simple_expression > function_call
    - single_name_part: "showline"
    - expression > unary_expression > simple_expression > literal > string: "\"finished\""
  - EOI: ""
